--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@
   }
 }
 
-/*** Media queries for adjusting to different screen sizes ***/
+/*adjusting to different screen sizes */
 @media only screen and (max-width: 600px) {
   .appearance {
     font-size: 10px;
