--- a/css/_store.scss
+++ b/css/_store.scss
@@ -36,9 +36,12 @@
             }
         }
         #store_buttons {
-            display: grid;
-            grid-template-columns: 2fr 1fr 1fr 1fr 1fr 2fr;
-            text-align: center;
+            // display: grid;
+            // grid-template-columns: 2fr 1fr 1fr 1fr 1fr 2fr;
+            // text-align: center;
+            display: flex;
+            justify-content: space-around;
+            flex-flow: wrap;
             font-size: 20px;
             border-bottom: 1px solid rgba(196, 241, 243, 0.5);
             cursor: pointer;
@@ -197,6 +200,10 @@
         align-items: center;
         z-index: -1;
     }
+    #products_selected {
+        height: 670px;
+        overflow-y: scroll;
+    }
 }
 .cart_product {
     display: grid;
@@ -210,7 +217,7 @@
         justify-content: center;
         img {
             height: 80px;
-            border-radius: 60px;
+            border-radius: 10px;
         }
         div {
             text-align: center;
@@ -227,5 +234,22 @@
     .cart_product_colour {
         width: 15px;
         height: 15px;
+    }
+}
+
+@media only screen and (max-width: 1350px) {
+    #store_container #products {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .cart_product {
+        display: block;
+        padding: 15px;
+    }
+}
+
+@media only screen and (min-height: 1000px) {
+    #cart #payment {
+        bottom: 75px;
     }
 }
