--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,6 @@
   }
 }
 
-/*adjusting to different screen sizes */
 @media only screen and (max-width: 600px) {
   .appearance {
     font-size: 10px;
@@ -433,11 +432,13 @@ div.change:nth-child(3) {
 }
 
 #store_container #store #store_buttons {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 2fr 1fr 1fr 1fr 1fr 2fr;
-      grid-template-columns: 2fr 1fr 1fr 1fr 1fr 2fr;
-  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-flow: wrap;
+      flex-flow: wrap;
   font-size: 20px;
   border-bottom: 1px solid rgba(196, 241, 243, 0.5);
   cursor: pointer;
@@ -675,6 +676,11 @@ div.change:nth-child(3) {
   z-index: -1;
 }
 
+#cart #products_selected {
+  height: 670px;
+  overflow-y: scroll;
+}
+
 .cart_product {
   display: -ms-grid;
   display: grid;
@@ -697,7 +703,7 @@ div.change:nth-child(3) {
 
 .cart_product .cart_product_image img {
   height: 80px;
-  border-radius: 60px;
+  border-radius: 10px;
 }
 
 .cart_product .cart_product_image div {
@@ -717,6 +723,25 @@ div.change:nth-child(3) {
 .cart_product .cart_product_colour {
   width: 15px;
   height: 15px;
+}
+
+@media only screen and (max-width: 1350px) {
+  #store_container #products {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .cart_product {
+    display: block;
+    padding: 15px;
+  }
+}
+
+@media only screen and (min-height: 1000px) {
+  #cart #payment {
+    bottom: 75px;
+  }
 }
 
 .main_animation .space {
@@ -1070,22 +1095,45 @@ body {
 #first_section #first_section_container #description p {
   font-family: auto;
   line-height: 20px;
+  padding: 25px;
 }
 
-#map_station {
+#iss_container {
+  overflow-y: auto;
+}
+
+#iss_container #map_station {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 3fr 2fr 3fr;
-      grid-template-columns: 3fr 2fr 3fr;
-  text-align: center;
+  -ms-grid-rows: max-content;
+      grid-template-rows: -webkit-max-content;
+      grid-template-rows: max-content;
 }
 
-#map_station #n2yo_passes {
-  display: none;
-}
-
-#cosmonauts {
+#iss_container #cosmonauts {
   font-size: 22px;
+}
+
+#iss_container #map_body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  padding-top: 15px;
+  -ms-flex-flow: wrap;
+      flex-flow: wrap;
+}
+
+#iss_container #iss_stream {
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #mars_weather p {
@@ -1294,5 +1342,35 @@ body {
   cursor: pointer;
   text-align: center;
   background: brown;
+}
+
+@media only screen and (max-width: 900px) {
+  .number {
+    font-size: 35px;
+  }
+  #first_section #first_section_container #description h3 {
+    margin-bottom: 0;
+  }
+  #first_section #first_section_container #description p {
+    margin: 0;
+  }
+  .count_down {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-top: 30px;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  #mars_container #mars_container_details {
+    -webkit-box-pack: initial;
+        -ms-flex-pack: initial;
+            justify-content: initial;
+    padding: 0;
+  }
+  #mars_container #mars_info p {
+    font-size: 20px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
