--- a/css/style.scss
+++ b/css/style.scss
@@ -235,20 +235,33 @@ body {
         p {
             font-family: auto;
             line-height: 20px;
+            padding: 25px;
         }
     }
 }
-#map_station {
-    display: grid;
-    grid-template-columns: 3fr 2fr 3fr;
-    text-align: center;
-    #n2yo_passes {
+#iss_container {
+    overflow-y: auto;
+    // grid-template-rows: 1fr 8fr;
+    #map_station {
+        display: grid;
+        grid-template-rows: max-content;
+    }
+    #cosmonauts {
+        font-size: 22px;
+    }
+    #map_body {
+        display: flex;
+        justify-content: space-evenly;
+        padding-top: 15px;
+        flex-flow: wrap;
+    }
+    #iss_stream {
         display: none;
+        justify-content: center;
+        align-items: center;
     }
 }
-#cosmonauts {
-    font-size: 22px;
-}
+
 #mars_weather p {
     padding: 0 30px;
     text-align: center;
@@ -387,4 +400,37 @@ body {
         text-align: center;
         background: brown;
     }
+}
+
+
+@media only screen and (max-width: 900px) {
+    .number {
+        font-size: 35px;
+    }
+    #first_section #first_section_container #description {
+        h3 {
+            margin-bottom: 0;
+        }
+        p {
+            margin: 0;
+        }
+    }
+    .count_down {
+        align-items: center;
+        margin-top: 30px;
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    #mars_container {
+        #mars_container_details {
+            justify-content: initial;
+            padding: 0;
+        }
+        #mars_info p {
+            font-size: 20px;
+        }
+    }
+    // #mars_container #mars_container_details {
+    // }
 }
