--- a/css/_store.scss
+++ b/css/_store.scss
@@ -137,7 +137,7 @@
     }
     .info_product {
         display: grid;
-        background: lightslategray;
+        background: rgba(119, 136, 153, 0.3);
     }
     .product_name {
         text-align: center;
@@ -172,7 +172,7 @@
         color: rgb(166, 168, 163);
     }
     .price_add {
-        background: lightslategray;
+        background: rgba(119, 136, 153, 0.3);
         .product_price {
             font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", sans-serif;
         }
@@ -199,16 +199,17 @@
         justify-content: center;
         align-items: center;
         z-index: -1;
+        border-radius: 5px;
     }
     #products_selected {
         height: 670px;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 }
 .cart_product {
     display: grid;
     grid-template-columns: 2fr 4fr;
-    background: lightslategrey;
+    background: rgba(119, 136, 153, 0.3);
     margin: 15px;
     border-radius: 12px;
     .cart_product_image {
